Closed Bug 330999 Opened 18 years ago Closed 18 years ago

Mac doesn't call nsIRollupListener::ShouldRollupOnMouseWheelEvent

Categories

(Core Graveyard :: Widget: Mac, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: masayuki, Assigned: jaas)

References

Details

(Keywords: fixed1.8.1)

Attachments

(2 files)

Mac doesn't call nsIRoolupListener::ShouldRollupOnMouseWheelEvent.
Therefore, bug 187772 is not fixed on Mac.
Attached patch Patch rv1.1Splinter Review
Probably, this fixes this bug. But I don't have Mac, we need to test this patch.
Summary: Mac doesn't call nsIRoolupListener::ShouldRollupOnMouseWheelEvent → Mac doesn't call nsIRollupListener::ShouldRollupOnMouseWheelEvent
(In reply to comment #1)
> Created an attachment (id=215555) [edit]
> Patch rv1.1
> 
> Probably, this fixes this bug. But I don't have Mac, we need to test this
> patch.
> 

This patch was tested.
This patch is working fine.
Comment on attachment 215555 [details] [diff] [review]
Patch rv1.1

Thanks, let's go this patch.
Attachment #215555 - Flags: superreview?(mikepinkerton)
Attachment #215555 - Flags: review?(joshmoz)
Too late for alpha 1 I suppose ...

Bug 187772 was blocking-firefox2+, but target mozilla1.9alpha1, so I don't think I can set that target to mozilla1.8.1alpha1, as asked for alpha1 triaging. So, I'ver set the blocking-firefox2? flag, and I'll hope it will be in alpha2.
Flags: blocking1.8.1?
Status: NEW → ASSIGNED
I'm  going to review this today, sorry for the long delay.
Comment on attachment 215555 [details] [diff] [review]
Patch rv1.1

Looks good, my tree is taking too long to build so I didn't test it myself. Looks like Hiro tested it though and it works.
Attachment #215555 - Flags: review?(joshmoz) → review+
Note to self to make sure this gets fixed in Cocoa widgets too.
Comment on attachment 215555 [details] [diff] [review]
Patch rv1.1

rs=pink
Attachment #215555 - Flags: superreview?(mikepinkerton) → superreview+
Attachment #215555 - Flags: approval-branch-1.8.1+
Masayuki - do you have cvs commit privs or do you want me to check this in? It can go on the FF 2 branch and the trunk. I'll take responsibility for fixing this in Cocoa, so don't close this bug before I do that.

Thanks Masayuki!
landed on 1.8 branch and trunk
Keywords: fixed1.8.1
verified.
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8) Gecko/20060406 Firefox/2.0a1
Attached patch cocoa fix v1.0Splinter Review
This also fixes rollup for normal scrolling.
Assignee: masayuki → joshmoz
Attachment #218184 - Flags: review?(mark)
Comment on attachment 218184 [details] [diff] [review]
cocoa fix v1.0

+  // close popups if we're supposed to...
+  if (gRollupListener && gRollupWidget &&
+      [self window] != gRollupWidget->GetNativeData(NS_NATIVE_WINDOW)) {
+    PRBool rollup = PR_FALSE;
+    gRollupListener->ShouldRollupOnMouseWheelEvent(&rollup);
+    if (rollup)
+      gRollupListener->Rollup();
+  }

I think you should do this in scrollWheel: and not scrollWheel:forAxis:.
Attachment #218184 - Flags: review?(mark) → review+
landed Cocoa fix on trunk with mento's suggestion
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Depends on: 339705
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: