Roll up popups if nsIRollupListener::ShouldRollupOnMouseWheelEvent says to do so. Patch by Masayuki Nakano (Mozilla Japan). b=330999 r=josh rs=pinkerton